<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/statistics">
        <menu>
            <item
                android:id="@+id/item_num_miles"
                android:title="@string/total_distance" />
            <item
                android:id="@+id/item_num_countries"
                android:title="@string/num_countries" />
            <item
                android:id="@+id/item_num_journals"
                android:title="@string/num_journals" />
            <item
                android:id="@+id/item_percentage_explored"
                android:title="@string/percentage_explored" />
        </menu>
    </item>

    <item android:title="@string/menu">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
