<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.UI_NewJournalActivity"
    tools:showIn="@layout/activity_new_journal">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Journal title -->
        <TextView
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="20sp"
            android:text="@string/title" />

        <EditText
            android:id="@+id/journal_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="#ddd"
            android:maxLines="1"
            android:height="40dp" />

        <!-- Content -->
        <TextView
            android:id="@+id/text_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="20sp"
            android:text="@string/content" />

        <EditText
            android:id="@+id/journal_content"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:background="#ddd"
            android:gravity="top|start"
            android:height="40dp" />

        <!-- Photo -->
        <ImageView
            android:id="@+id/journal_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:onClick="addPhoto"
            android:src="@drawable/add_photo" />

        <!-- Save button -->
        <Button
            android:id="@+id/button_send_email"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:text="@string/save"
            android:textSize="22sp"
            android:textAllCaps="false"
            android:background="@color/colorPrimary"
            android:textColor="#fff"
            android:onClick="saveJournal" />

    </LinearLayout>

</ScrollView>
